# vlm-bench

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci-smoke.yml
instructions/: PRD_InternVL3_38B_vlm-bench.md
vlm_bench/: benchlock.py  cli.py
vlm_bench/configs/: system.yaml
vlm_bench/configs/datasets/: my_bench.yaml
vlm_bench/configs/models/: internvl.yaml  internvl3_38b.yaml  qwen_vl.yaml
vlm_bench/configs/runs/: qwen2p5vl_7b.yaml
vlm_bench/registry/dataset_adapters/: base.py  my_bench.py
vlm_bench/registry/model_adapters/: base.py  internvl.py  internvl3.py  qwen_vl.py
vlm_bench/runners/: base.py  native_backend.py  vlmeval_backend.py
vlm_bench/scorers/: base.py  exact.py  llm_judge_stub.py  numeric_tol.py  regex_extract.py
vlm_bench/utils/: io.py  logging.py  seed.py  video.py
